<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:paddingTop="10dp"
        android:textStyle="bold"
        android:paddingBottom="10dp"
        app:fontFamily="@font/berlin_sans_fb_regular"
        android:gravity="center"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:hintAnimationEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/destination"
            android:hint="@string/destination"
            android:inputType="text"
            android:textColorHint="@color/colorAccent"
            android:imeActionLabel="Next"
            android:imeOptions="actionSend"
            android:textSize="24sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:fontFamily="@font/berlin_sans_fb_regular"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:hintAnimationEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/price"
            android:hint="@string/fare"
            android:inputType="number"
            android:textColorHint="@color/colorAccent"
            android:imeActionLabel="Next"
            android:imeOptions="actionSend"
            android:textSize="24sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:fontFamily="@font/berlin_sans_fb_regular"
            />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/travel_time"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="18sp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textSize="18sp"
            android:layout_marginTop="2dp"
            android:text="@string/morning"
            android:id="@+id/checkboxMorning"
            android:layout_marginBottom="8dp"
            android:layout_weight="0.5"
            app:fontFamily="@font/berlin_sans_fb_regular"
            android:layout_marginStart="16dp" />
        <EditText
            android:id="@+id/morningTime"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="0.5"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:hint="@string/time_e_g_6am"
            android:textColor="@color/black"
            android:backgroundTint="@color/colorPrimary"
            android:foregroundTint="@color/colorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textSize="18sp"
            android:layout_marginTop="2dp"
            android:text="@string/afternoon"
            android:id="@+id/checkboxAfternoon"
            android:layout_marginBottom="8dp"
            android:layout_weight="0.5"
            app:fontFamily="@font/berlin_sans_fb_regular"
            android:layout_marginStart="16dp" />
        <EditText
            android:id="@+id/afternoonTime"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="0.5"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:hint="@string/time_e_g_3pm"
            android:textColor="@color/black"
            android:backgroundTint="@color/colorPrimary"
            android:foregroundTint="@color/colorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textSize="18sp"
            android:layout_marginTop="4dp"
            android:text="@string/night"
            android:id="@+id/checkboxNight"
            android:layout_weight="0.5"
            android:layout_marginBottom="4dp"
            app:fontFamily="@font/berlin_sans_fb_regular"
            android:layout_marginStart="16dp" />
        <EditText
            android:id="@+id/nightTime"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="0.5"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:hint="@string/time_e_g_6pm"
            android:textColor="@color/black"
            android:backgroundTint="@color/colorPrimary"
            android:foregroundTint="@color/colorPrimary"/>

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@drawable/btn_primary_bk"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/btn_add"
        android:text="@string/add_route"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:fontFamily="@font/berlin_sans_fb_regular" />

</LinearLayout>
