<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".VipFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:weightSum="10"
        android:layout_margin="16dp"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="1"
            android:layout_weight="5">
            <android.support.v7.widget.AppCompatButton
                android:layout_width="0dp"
                android:id="@+id/btn_route"
                android:layout_height="96dp"
                android:drawableTop="@drawable/route_btn_icon"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:paddingTop="14dp"
                android:layout_margin="4dp"
                android:paddingBottom="14dp"
                android:gravity="center"
                android:text="@string/route"
                app:fontFamily="@font/berlin_sans_fb_regular"
                android:layout_weight="0.5"/>
            <android.support.v7.widget.AppCompatButton
                android:layout_width="0dp"
                android:id="@+id/btn_validate"
                android:layout_height="96dp"
                android:drawableTop="@drawable/validate_icon"
                android:paddingTop="14dp"
                android:background="@color/colorAccent"
                android:layout_margin="4dp"
                android:paddingBottom="14dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/validate"
                app:fontFamily="@font/berlin_sans_fb_regular"
                android:layout_weight="0.5"/>

        </LinearLayout>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_notification"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:drawableTop="@drawable/sms_noti_icon"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:layout_margin="4dp"
            android:gravity="center"
            app:fontFamily="@font/berlin_sans_fb_regular"
            android:text="@string/sms_reminder"/>
    </LinearLayout>

</RelativeLayout>